public class Researcher extends Player {

    public void detectCapacity(Direction dir);
}
